--- a/WorkTime.Web/Views/Invoices/Edit.cshtml
+++ b/WorkTime.Web/Views/Invoices/Edit.cshtml
@@ -1,12 +1,12 @@
 ﻿@model WorkTime.Models.Invoice
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Редактирование счёта";
 }
 
-<h1>Edit</h1>
+<h1>Редактирование счёта</h1>
 
-<h4>Invoice</h4>
+<h4>Счёт №@Model.Id</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -14,84 +14,84 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
+                <label asp-for="UserId" class="control-label">Сотрудник</label>
                 <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
                 <span asp-validation-for="UserId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProjectId" class="control-label"></label>
+                <label asp-for="ProjectId" class="control-label">Проект</label>
                 <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
                 <span asp-validation-for="ProjectId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PaymentStateId" class="control-label"></label>
+                <label asp-for="PaymentStateId" class="control-label">Статус оплаты</label>
                 <select asp-for="PaymentStateId" class="form-control" asp-items="ViewBag.PaymentStateId"></select>
                 <span asp-validation-for="PaymentStateId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Date" class="control-label"></label>
+                <label asp-for="Date" class="control-label">Дата</label>
                 <input asp-for="Date" class="form-control" />
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="HoursWorked" class="control-label"></label>
+                <label asp-for="HoursWorked" class="control-label">Отработано часов</label>
                 <input asp-for="HoursWorked" class="form-control" />
                 <span asp-validation-for="HoursWorked" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="HourlyWage" class="control-label"></label>
+                <label asp-for="HourlyWage" class="control-label">Почасовая ставка</label>
                 <input asp-for="HourlyWage" class="form-control" />
                 <span asp-validation-for="HourlyWage" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SumByHours" class="control-label"></label>
+                <label asp-for="SumByHours" class="control-label">Сумма по часам</label>
                 <input asp-for="SumByHours" class="form-control" />
                 <span asp-validation-for="SumByHours" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Bonus" class="control-label"></label>
+                <label asp-for="Bonus" class="control-label">Бонус</label>
                 <input asp-for="Bonus" class="form-control" />
                 <span asp-validation-for="Bonus" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Total" class="control-label"></label>
+                <label asp-for="Total" class="control-label">Всего</label>
                 <input asp-for="Total" class="form-control" />
                 <span asp-validation-for="Total" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Issued" class="control-label"></label>
+                <label asp-for="Issued" class="control-label">Выплачено</label>
                 <input asp-for="Issued" class="form-control" />
                 <span asp-validation-for="Issued" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Remainder" class="control-label"></label>
+                <label asp-for="Remainder" class="control-label">Осталось</label>
                 <input asp-for="Remainder" class="form-control" />
                 <span asp-validation-for="Remainder" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Debt" class="control-label"></label>
+                <label asp-for="Debt" class="control-label">Долг</label>
                 <input asp-for="Debt" class="form-control" />
                 <span asp-validation-for="Debt" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="RemWdebtAndBonus" class="control-label"></label>
+                <label asp-for="RemWdebtAndBonus" class="control-label">Итого с учётом долга и бонуса</label>
                 <input asp-for="RemWdebtAndBonus" class="form-control" />
                 <span asp-validation-for="RemWdebtAndBonus" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SumWithTax" class="control-label"></label>
+                <label asp-for="SumWithTax" class="control-label">Сумма с учётом налога</label>
                 <input asp-for="SumWithTax" class="form-control" />
                 <span asp-validation-for="SumWithTax" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Сохранить" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Вернуться к списку</a>
 </div>
 
 @section Scripts {
