--- a/WorkTime.Web/Views/Shared/_SideBar.cshtml
+++ b/WorkTime.Web/Views/Shared/_SideBar.cshtml
@@ -3,7 +3,7 @@
 
 
 <div id="sideBar" hidden>
-    <div id="scrim" class="dark-background" style="transition-duration: 200ms" onclick="toggleSideBar()"></div>
+    <div id="scrim" class="dark-background" onclick="toggleSideBar()"></div>
     <div id="sideBarMenu" class="px-0 bg-light slide">
         <div class="d-flex flex-column align-items-center align-items-sm-start pt-2 text-white min-vh-100">
             <div class="ps-3 pb-3" style="padding-top: 0.4rem; margin-left: -0.25rem">
