--- a/WorkTime.Web/Views/Invoices/Details.cshtml
+++ b/WorkTime.Web/Views/Invoices/Details.cshtml
@@ -3,13 +3,12 @@
 @model WorkTime.Models.Invoice
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Детали счёта";
 }
 
-<h1>Details</h1>
+<h1>Детали счёта</h1>
 
 <div>
-    <h4>Invoice</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -99,6 +98,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Редактировать</a> |
+    <a asp-action="Index">Вернуться к списку</a>
 </div>
