--- a/WorkTime.Web/Views/Projects/AddUserInProject.cshtml
+++ b/WorkTime.Web/Views/Projects/AddUserInProject.cshtml
@@ -55,4 +55,13 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
+
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("#UserId").select2();
+        });
+    </script>
+
 }
