--- a/WorkTime.Web/Views/Tasks/Create.cshtml
+++ b/WorkTime.Web/Views/Tasks/Create.cshtml
@@ -23,7 +23,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="ProjectId" class="control-label">Проект</label>
-                <select asp-for="ProjectId" class="form-control" value="Без проекта" asp-items="ViewBag.ProjectId" onchange="getUsers()">
+                <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId" onchange="getUsers()">
                 </select>
             </div>
             <div class="form-group">
@@ -51,8 +51,14 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script>
         getUsers();
+
+        $(document).ready(function () {
+            $("#ProjectId").select2();
+        });
 
         function getUsers() {
             $.ajax({
@@ -68,6 +74,7 @@
                     for (let i = 0; i < array.data.length; i++) {
                         $('#PerformerId').append('<option value="' + array.data[i].UserId + '">' + array.data[i].Surname + ' ' + array.data[i].Name + '</option>');
                     }
+                    $("#PerformerId").select2();
                 }
             });
         }
