--- a/WorkTime.Web/Views/Tasks/Details.cshtml
+++ b/WorkTime.Web/Views/Tasks/Details.cshtml
@@ -1,65 +1,63 @@
 ﻿@model WorkTime.Models.WorkTask
+@using WorkTime.Web.Services
+@inject UserInformation UserInfo
 
 @{
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Детали задачи</h1>
+
+@Model.TaskName
 
 <div>
     <h4>WorkTask</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TaskName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TaskName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TaskText)
+            Текст задачи
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.TaskText)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CountOfHours)
+            Количество часов
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.CountOfHours)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateOfCompletion)
+            Дата завершения
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DateOfCompletion)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.InvoiceId)
+            ID счёта (появляется после формирования счёта)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.InvoiceId)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Issuer)
+            Выдал задачу
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Issuer.Id)
+            @UserInfo.GetName(Model.Issuer.Id)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Performer)
+            Исполнитель
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Performer.Id)
+            @UserInfo.GetName(Model.Performer.Id)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Project)
+            Проект
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Project.Id)
+            @Html.DisplayFor(model => model.Project.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TaskStatus)
+            Статус задачи
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.TaskStatus.Name)
@@ -67,6 +65,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Редактировать</a> |
+    <a asp-action="Index">Вернуться к списку</a>
 </div>
