--- a/WorkTime.Web/Views/Tasks/Edit.cshtml
+++ b/WorkTime.Web/Views/Tasks/Edit.cshtml
@@ -24,7 +24,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="ProjectId" class="control-label">Проект</label>
-                <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
+                <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId">
+                    <option value="null">Без проекта</option>
+                </select>
                 <span asp-validation-for="ProjectId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -44,7 +46,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="DateOfCompletion" class="control-label">Дата завершения</label>
-                <input asp-for="DateOfCompletion" class="form-control" />
+                <input type="date" asp-for="DateOfCompletion" class="form-control" />
                 <span asp-validation-for="DateOfCompletion" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -65,9 +67,21 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Вернуться к списку</a>
 </div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $("#ProjectId").select2();
+            $("#PerformerId").select2();
+            $("#IssuerId").select2();
+        });
+    </script>
+
 }
